demo_install/qotd/k8s/qotd_author.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: qotd-author
  namespace: qotd
  labels:
    app: qotd
    tier: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qotd-author
  template:
    metadata:
      labels:
        app: qotd-author
    spec:
      restartPolicy: Always
      volumes:
        - name: settings
          configMap:
            name: qotd-author-factory-settings
      containers:
        - name: qotd-author
          image: registry.gitlab.com/quote-of-the-day/qotd-author-service:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: settings
              mountPath: /app/data
          ports:
            - name: http
              containerPort: 3002
              protocol: TCP
            - name: svc
              containerPort: 8082
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: "25m"
              memory: "40Mi"
            limits:
              cpu: "200m"
              memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: qotd-author
  labels:
    app: qotd
    tier: api
spec:
  type: ClusterIP
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
      name: http
  selector:
    app: qotd-author
