demo_install/qotd/k8s/qotd_image.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: qotd-image
  namespace: qotd
  labels:
    app: qotd
    tier: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qotd-image
  template:
    metadata:
      labels:
        app: qotd-image
    spec:
      volumes:
        - name: settings
          configMap:
            name: qotd-image-factory-settings
      restartPolicy: Always
      containers:
        - name: qotd-image
          image: registry.gitlab.com/quote-of-the-day/qotd-image-service:latest
          ports:
            - name: http
              containerPort: 3003
              protocol: TCP
            - name: svc
              containerPort: 8083
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: settings
              mountPath: /app/data
          livenessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: "25m"
              memory: "40Mi"
            limits:
              cpu: "200m"
              memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: qotd-image
  labels:
    app: qotd
    tier: api
spec:
  type: ClusterIP
  ports:
    - port: 3003
      targetPort: 3003
      protocol: TCP
      name: http
  selector:
    app: qotd-image
---
apiVersion: v1
kind: Service
metadata:
  name: qotd-image-svc
  labels:
    app: qotd
    tier: api
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: 8083
      protocol: TCP
      name: svc
  selector:
    app: qotd-image
