demo_install/qotd/k8s/qotd_quote.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qotd-quote
  namespace: qotd
  labels:
    app: qotd
    tier: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qotd-quote
  template:
    metadata:
      labels:
        app: qotd-quote
    spec:
      volumes:
        - name: settings
          configMap:
            name: qotd-quote-factory-settings
      restartPolicy: Always
      containers:
        - name: qotd-quote
          image: registry.gitlab.com/quote-of-the-day/quote-service:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: settings
              mountPath: /app/data
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
            - name: svc
              containerPort: 8081
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: "25m"
              memory: "40Mi"
            limits:
              cpu: "200m"
              memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: qotd-quote
  labels:
    app: qotd
    tier: api
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      name: http
  selector:
    app: qotd-quote
---
apiVersion: v1
kind: Service
metadata:
  name: qotd-quote-svc
  labels:
    app: qotd
    tier: api
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: svc
  selector:
    app: qotd-quote
