demo_install/qotd/k8s/qotd_rating.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: qotd-ratings
  namespace: qotd
  labels:
    app: qotd
    tier: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qotd-rating
  template:
    metadata:
      labels:
        app: qotd-rating
    spec:
      volumes:
        - name: settings
          configMap:
            name: qotd-ratings-factory-settings
      restartPolicy: Always
      containers:
        - name: qotd-rating
          image: registry.gitlab.com/quote-of-the-day/qotd-ratings-service:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: settings
              mountPath: /app/data
          ports:
            - name: http
              containerPort: 3004
              protocol: TCP
            - name: svc
              containerPort: 8084
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 3004
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: "25m"
              memory: "40Mi"
            limits:
              cpu: "200m"
              memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: qotd-rating
  namespace: qotd
  labels:
    app: qotd
    tier: api
spec:
  type: ClusterIP
  ports:
    - port: 3004
      targetPort: 3004
      protocol: TCP
      name: http
  selector:
    app: qotd-rating
---
apiVersion: v1
kind: Service
metadata:
  name: qotd-rating-svc
  namespace: qotd
  labels:
    app: qotd
    tier: api
spec:
  type: ClusterIP
  ports:
    - port: 8084
      targetPort: 8084
      protocol: TCP
      name: svc
  selector:
    app: qotd-rating
